<resources>
    <string name="app_name">Dutch</string>

    <string name="ok">확인</string>

    <!-- Link -->
    <string name="login_link">http://35.234.38.124/dutch/login.php</string>
    <string name="join_link">http://35.234.38.124/dutch/join.php</string>
    <string name="state_link">http://35.234.38.124/dutch/state.php</string>
    <string name="search_link">http://35.234.38.124/dutch/search.php</string>
    <string name="complete_link">http://35.234.38.124/dutch/complete.php</string>
    <string name="debt_link">http://35.234.38.124/dutch/rent.php</string>
    <string name="loan_link">http://35.234.38.124/dutch/loan.php</string>

    <!-- Login -->
    <string name="input_id">아이디를 입력해주세요.</string>
    <string name="input_pwd">비밀번호를 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="auto_login">자동 로그인</string>
    <string name="been_first">처음 오셨나요?</string>
    <string name="join">회원가입</string>
    <string name="chk_id_pwd">아이디나 비밀번호를 확인해주세요.</string>

    <!-- Join -->
    <string name="input_id_pwd">ID와 비밀번호를 입력해주세요.</string>
    <string name="diff_pwd_chk">비밀번호 확인이 다릅니다.</string>
    <string name="duplicated_id">이미 존재하는 ID입니다.</string>
    <string name="password">비밀번호</string>
    <string name="password_chk">비밀번호 확인</string>

    <!-- State -->
    <string name="credit">신용도</string>
    <string name="debt">빌린 돈</string>
    <string name="loan">빌려준 돈</string>
    <string name="detail">자세히</string>
    <string name="go_dutch">더치페이 하기</string>

    <!-- Dutch -->
    <string name="input_money">금액을 입력해주세요.</string>
    <string name="input_date">날짜를 선택해주세요.</string>
    <string name="loan_member">빌린 사람의 아이디</string>
    <string name="bank">은행</string>
    <string name="bank_account">계좌번호</string>
    <string name="choose">선택</string>
    <string name="bank_account_no_minus">계좌 번호 (- 없이 입력)</string>
    <string name="must_input">입력되지 않은 필수값이 있습니다.</string>
    <string name="input_debt_member">빌린 사람의 아이디를 입력해주세요.</string>

    <!-- Bank -->
    <string name="nh_bank">NH농협</string>
    <string name="kb_bank">KB국민</string>
    <string name="shinhan_bank">신한</string>
    <string name="jeonbook_bank">전북</string>
    <string name="ibk_bank">IBK기업</string>
    <string name="post_bank">우체국</string>
    <string name="daegu_bank">대구</string>
    <string name="woori_bank">우리</string>
    <string name="hana_bank">하나</string>

    <!--dutch_complete -->
    <string name="adjust_money">사용자를 클릭해 세부 금액을 조정하세요!</string>
    <string name="revise">수정</string>
    <string name="input_revise_money">수정할 금액을 입력해 주세요.</string>
    <string name="revise_money">금액 수정</string>


    <!-- expandable list child -->
    <string name="money">금액</string>
    <string name="date">날짜</string>

</resources>
