<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorSky"
    android:orientation="vertical"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/image01"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:inputType="text"
            android:layout_height="50dp"
            android:layout_width = "300dp"
            android:hint="@string/input_id"
            android:lines="1"
            android:singleLine="true"
            android:textColorHint="@color/colorGray"
            android:textCursorDrawable="@null"
            android:textColor="@android:color/white"
            android:theme="@style/MyEditTextTheme"
            android:id="@+id/et_id" />

        <EditText
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:hint="@string/input_pwd"
            android:lines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorGray"
            android:theme="@style/MyEditTextTheme"
            android:inputType="textPassword"
            android:id="@+id/et_pwd" />

        <Button
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="@color/colorDeep"
            android:textSize="15dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="80dp"
            android:id="@+id/btn_login"/>


        <CheckBox
            android:layout_marginTop="7dp"
            android:text="@string/auto_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/auto_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/been_first"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:background="@null"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/join"
                android:id = "@+id/btn_join"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>