<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_dutch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:focusable="true"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isScrollContainer="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/coins"/>

                <EditText
                    android:id="@+id/et_money"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:hint="@string/input_money"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/calendar"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"
                    android:id="@+id/tv_date"
                    android:text="@string/input_date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/team"/>

                <EditText
                    android:inputType="text"
                    android:id="@+id/et_find"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:layout_width="0dp"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/loan_member" />

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"/>
            </LinearLayout>

            <ListView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:divider="#00000000"
                android:dividerHeight="1dp"
                android:id="@+id/lv_debt_member"
                android:layout_weight="0.11" />

            <TableLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:textColor="@android:color/black"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/bank"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/bank_account"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp">
                    <Button
                        android:layout_height="38dp"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/border"
                        android:id="@+id/btn_bank"
                        android:textSize="15dp"
                        android:textColor="@android:color/white"
                        android:text="@string/choose"/>

                    <EditText
                        android:id="@+id/et_account"
                        android:textColorHint="@android:color/white"
                        android:textColor="@color/colorGrayDeep"
                        android:textCursorDrawable="@null"
                        android:layout_height="38dp"
                        android:cursorVisible="false"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:background="@drawable/border"
                        android:hint="@string/bank_account_no_minus"
                        android:inputType="number"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_complete"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorSky"
        android:text="@string/ok"/>

</LinearLayout>
