<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">

        <TableRow android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/credit"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/rc_rate"
                style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:isIndicator="true"
                android:numStars="5" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/date"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp" />
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_account"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp" />
        </TableRow>
    </TableLayout>
</LinearLayout>
