<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp">

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@color/colorGrayDeep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/credit"/>

            <RatingBar
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                style="@android:style/Widget.DeviceDefault.RatingBar.Small" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"/>

            <TextView
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:id="@+id/tv_money" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/date"/>
            <TextView
                android:textColor="@color/colorGrayDeep"
                android:textSize="15dp"
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>
</LinearLayout>
