<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_dutch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:focusable="true"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/coins"/>

                <TextView
                    android:id="@+id/tv_money"
                    android:textSize="20dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="15dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/calendar"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="15dp"
                    android:textSize="20dp"
                    android:id="@+id/tv_date" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/team"/>

                <TextView
                    android:id="@+id/tv_find"
                    android:layout_weight="1"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/adjust_money" />

            </LinearLayout>

            <ListView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:divider="#00000000"
                android:dividerHeight="1dp"
                android:id="@+id/lv_debt"
                android:layout_weight="0.11" />

            <TableLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:textColor="@android:color/black"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/bank"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/bank_account"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_height="38dp"
                        android:layout_width="80dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/border"
                        android:id="@+id/tv_bank"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:text="@string/choose"/>

                    <TextView
                        android:id="@+id/tv_account"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:background="@drawable/border"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorSky"
        android:onClick="Complete"
        android:text="@string/ok"/>

</LinearLayout>